--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -11,6 +11,9 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
