--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -11,7 +11,7 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  position: fixed;
+  position: absolute;
   width: 100%;
   bottom: 0;
   background-color: $lighter-gray;
