--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -11,9 +11,13 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
+          
   position: absolute;
   width: 100%;
   bottom: 0;
+  height: 100px;
+  left: 0;
+
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
