--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,7 +20,7 @@
     @include clearfix;
     margin-top: 2em;
     padding: 0 1em 2em;
-
+    bottom: 0;
     @include breakpoint($x-large) {
       max-width: $x-large;
     }
