--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -5,7 +5,10 @@
 .page__footer {
   @include full();
   @include clearfix;
-  margin-top: 3em;
+  margin-top: -3em;
+  position: relative;
+  clear: both;
+  z-index: 10;
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -20,7 +23,6 @@
     @include clearfix;
     margin-top: 2em;
     padding: 0 1em 2em;
-    bottom: 0;
     @include breakpoint($x-large) {
       max-width: $x-large;
     }
