--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -5,21 +5,21 @@
 .page__footer {
   @include full();
   @include clearfix;
+  margin-top: 3em;
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
   footer {
-    bottom: 0;
     @include container;
     @include clearfix;
     margin-top: 2em;
     padding: 0 1em 2em;
+
     @include breakpoint($x-large) {
       max-width: $x-large;
     }
